--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0"
