--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-router-dom": "^5.3.3",
     "fabric": "^6.7.1",
     "firebase": "^12.1.0",
+    "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.539.0",
     "nanoid": "^5.1.5",
     "react": "^19.1.1",
     "react-colorful": "^5.6.1",
